--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <title>Eksempel</title>
 </head>
 <body>
-    PRG120V
+<h2>Eksempler til tema 1</h2>
+<ul>
+  <li><a href="tema01/eksempler/eksempel-1.html" target="_blank">Eksempel 1</a></li>
+  <li><a href="tema01/eksempler/eksempel-2.html" target="_blank">Eksempel 2 </a></li>
+  <li><a href="tema01/eksempler/eksempel-3.html" target="_blank">Eksempel 3 </a></li>
+</ul>
 </body>
 </html>
