--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
 <h2>Eksempler til tema 1</h2>
 <ul>
-  <form method="post" action="eksempel-1.php" id="eksempel1" name="eksempel1">
+  <form method="post" action="eksempel-1.php" id="eksempel1" name="eksempel1"> </form>
 </ul>
 </body>
 </html>
