--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
 <h2>Eksempler til tema 1</h2>
 <ul>
-  <form method="post" action="eksempel-1.php" id="eksempel1" name="eksempel1"> </form>
+    <li><a href="tema01/eksempler/eksempel-1.html" target="_blank">Eksempel 1</a></li>
 </ul>
 </body>
 </html>
