--- a/eksempel-1.html
+++ b/eksempel-1.html
@@ -34,6 +34,7 @@
       margin-bottom: 15px;
       border: 2px solid #ccc;
       border-radius: 4px;
+      text-align: center;
     }
     input[type="submit"],
     input[type="reset"] {
