--- a/eksempel-1.html
+++ b/eksempel-1.html
@@ -5,9 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Eksempel 1</title>
   <style>
+    <!-- The background of the buttons and text -->
     body {
       font-family: Arial, sans-serif;
-      background-color: #f4f4f4;
+      background-color: #fff;
       margin: 0;
       padding: 20px;
     }
@@ -16,6 +17,7 @@
       text-align: center;
     }
     form {
+    <!-- The text over the buttons -->
       background-color: #fff;
       border-radius: 8px;
       box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
@@ -23,6 +25,7 @@
       max-width: 400px;
       margin: 0 auto;
     }
+    <!-- The text over the buttons -->
     label {
       display: block;
       margin-bottom: 8px;
