--- a/eksempel-1.html
+++ b/eksempel-1.html
@@ -8,7 +8,7 @@
     <!-- The background of the buttons and text -->
     body {
       font-family: Arial, sans-serif;
-      background-color: #fff;
+      background-color: #000000;
       margin: 0;
       padding: 20px;
     }
