--- a/eksempel-1.html
+++ b/eksempel-1.html
@@ -54,7 +54,7 @@
     input[type="reset"] {
       background-color: #5cb85c; /* Green background for buttons */
       color: white; /* White text color */
-      border: 2px solid #000000; /* Light gray border */
+      border: 10px solid #000000; /* Light gray border */
       border: none; /* Removes default border */
       padding: 10px 15px; /* Adds internal spacing */
       border-radius: 4px; /* Rounds button corners */
@@ -78,7 +78,7 @@
 </head>
 <body>
   <!-- Visible content of the page -->
-  <h3>Sett inn de etterspurte dataene1</h3> <!-- Displays "Eksempel 1" as a centered heading -->
+  <h3>Sett inn de etterspurte dataene</h3> <!-- Displays "Eksempel 1" as a centered heading -->
 
   <!-- Form for collecting user input -->
   <form method="post" action="eksempel-1.php" id="eksempel1" name="eksempel1">
