--- a/tema01/oppgave02/oppgave02.html
+++ b/tema01/oppgave02/oppgave02.html
@@ -4,7 +4,7 @@
   <!-- Metadata section for page settings and resources -->
   <meta charset="UTF-8"> <!-- Supports special characters like æ, ø, å -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Makes the page responsive for mobile devices -->
-  <title>Eksempel 1</title> <!-- Title shown in the browser tab -->
+  <title>oppgave 2</title> <!-- Title shown in the browser tab -->
   <style>
     /* Styling for the entire page */
     body {
