--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Eksempel</title>
+    <title>Svar på oppgaver!</title>
 </head>
+
 <body>
-<h2>Eksempler til tema 1</h2>
+<h2>Svar på oppgaver!</h2>
+<h3>Svar på oppgaver fra tema 1</h3>
 <ul>
     <li><a href="tema01/oppgave02/oppgave02.html" target="_blank">Oppgave 2</a></li>
 </ul>
