--- a/tema01/oppgave02/oppgave02.html
+++ b/tema01/oppgave02/oppgave02.html
@@ -80,7 +80,7 @@
   <h3>Sett inn de etterspurte dataene</h3> <!-- Displays "Eksempel 1" as a centered heading -->
 
   <!-- Form for collecting user input -->
-  <form method="post" action="/tema01/oppgave02/oppgave02.php" id="eksempel1" name="eksempel1">
+  <form method="post" action="/tema01/oppgave02/oppgave02.php" id="oppgave02" name="oppgave02">
     <!-- method="post": Sends data securely to server -->
     <!-- action="eksempel-1.php": Points to PHP file for form processing -->
     <!-- id and name: Identifiers for JavaScript/CSS -->
