Bigger update, new oppgave 3

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <h3>Svar på oppgaver fra tema 1</h3>
     <ul>
         <li><a href="tema01/oppgave02/oppgave02.html" target="_blank">Oppgave 2</a></li>
+        <li><a href="tema01/oppgave03/oppgave03.html" target="_blank">Oppgave 3</a></li>
     </ul>
     </body>
     </html>
