Fixed and the big update should work now

--- a/tema01/oppgave03/oppgave03.html
+++ b/tema01/oppgave03/oppgave03.html
@@ -77,17 +77,17 @@
 </head></ul>
 <body>
   <!-- Visible content of the page -->
-  <h3>Sett inn to tall</h3> <!-- Displays "Eksempel 1" as a centered heading -->
+  <h3>Sett inn to tall</h3> <!-- Displays "Sett inn to tall" as a centered heading -->
 
   <!-- Form for collecting user input -->
   <form method="post" action="tema01/oppgave03/oppgave03.php" id="oppgave03" name="oppgave03">
     <!-- method="post": Sends data securely to server -->
-    <!-- action="eksempel-1.php": Points to PHP file for form processing -->
+    <!-- action="oppgave03.php": Points to PHP file for form processing -->
     <!-- id and name: Identifiers for JavaScript/CSS -->
 
     <!-- First name field -->
     <label for="tall01">tall 1</label> <!-- Label for first name -->
-    <input type="text" id="tall01" name="ftall01" required placeholder="Skriv inn tall 1" /> <!-- Text input for first name -->
+    <input type="text" id="tall01" name="tall01" required placeholder="Skriv inn tall 1" /> <!-- Text input for first name -->
     <!-- id: Links to label; name: Used for form submission; required: Ensures field isn't empty -->
 
     <!-- Last name field -->
