--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <ul>
         <li><a href="tema01/oppgave02/oppgave02.html" target="_blank">Oppgave 2</a></li>
         <li><a href="tema01/oppgave03/oppgave03.html" target="_blank">Oppgave 3</a></li>
+        <li><a href="tema01/oppgave04/oppgave04.html" target="_blank">Oppgave 4</a></li>
     </ul>
     </body>
     </html>
