--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <ul>
     <h3>Svar på oppgaver fra tema 1</h3>
     <ul>
+        <li><a href="tema01/oppgave01/oppgave01.html" target="_blank">Oppgave 1</a></li>
         <li><a href="tema01/oppgave02/oppgave02.html" target="_blank">Oppgave 2</a></li>
         <li><a href="tema01/oppgave03/oppgave03.html" target="_blank">Oppgave 3</a></li>
         <li><a href="tema01/oppgave04/oppgave04.html" target="_blank">Oppgave 4</a></li>
