--- a/index.html
+++ b/index.html
@@ -16,6 +16,19 @@
         <li><a href="tema01/oppgave03/oppgave03.html" target="_blank">Oppgave 3</a></li>
         <li><a href="tema01/oppgave04/oppgave04.html" target="_blank">Oppgave 4</a></li>
     </ul>
+
+    <h3>Svar på oppgaver fra tema 2</h3>
+    <ul>
+        <li><a href="tema02/oppgave01/oppgave01.html" target="_blank">Oppgave 1</a></li>
+        <li><a href="tema02/oppgave02/oppgave02.html" target="_blank">Oppgave 2</a></li>
+        <li><a href="tema02/oppgave03/oppgave03.html" target="_blank">Oppgave 3</a></li>
+        <li><a href="tema02/oppgave04/oppgave04.html" target="_blank">Oppgave 4</a></li>
+        <li><a href="tema02/oppgave05/oppgave05.html" target="_blank">Oppgave 5</a></li>
+        <li><a href="tema02/oppgave06/oppgave06.html" target="_blank">Oppgave 6</a></li>
+        <li><a href="tema02/oppgave07/oppgave07.html" target="_blank">Oppgave 7</a></li>
+        <li><a href="tema02/oppgave08/oppgave08.html" target="_blank">Oppgave 8</a></li>
+    </ul>
+
     </body>
     </html>
 </ul>
