--- a/tema02/oppgave01-t2/oppgave01-t2.html
+++ b/tema02/oppgave01-t2/oppgave01-t2.html
@@ -87,7 +87,7 @@
 
     <!-- Number field -->
     <label for="Tall">Tall</label> <!-- Label for Number -->
-    <input type="text" id="Tall" name="Tall" required placeholder="Skriv in svar" /> <!-- Text input for first name -->
+    <input type="text" id="tall" name="tall" required placeholder="Skriv in svar" /> <!-- Text input for first name -->
     <!-- id: Links to label; name: Used for form submission; required: Ensures field isn't empty -->
 
     <!-- Submit and reset buttons -->
