Fix for the empty answer

--- a/tema02/oppgave02-t2/oppgave02-t2.html
+++ b/tema02/oppgave02-t2/oppgave02-t2.html
@@ -87,7 +87,7 @@
 
     <!-- Number field -->
     <label for="student">(j/n)</label> <!-- Label for student -->
-    <input type="text" id="student" name="student" required placeholder="Skriv in svar" /> <!-- Text input for first field -->
+    <input type="text" id="student" name="student" placeholder="Skriv in svar" /> <!-- Text input for first field -->
     <!-- id: Links to label; name: Used for form submission; required: Ensures field isn't empty -->
 
     <!-- Submit and reset buttons -->
