Made the questions more descriptive

--- a/tema02/oppgave04-t2/oppgave04-t2.html
+++ b/tema02/oppgave04-t2/oppgave04-t2.html
@@ -86,12 +86,12 @@
     <!-- id and name: Identifiers for JavaScript/CSS -->
 
     <!-- Gift field -->
-    <label for="gift">(j/n)</label> <!-- Label for gift -->
+    <label for="gift">Er du gift?</label> <!-- Label for gift -->
     <input type="text" id="gift" name="gift" placeholder="Er du gift (j/n)??" /> <!-- Text input for first field -->
     <!-- id: Links to label; name: Used for form submission; required: Ensures field isn't empty -->
 
     <!-- Barn field -->
-    <label for="barn">(j/n)</label> <!-- Label for barn -->
+    <label for="barn">Har du barn?</label> <!-- Label for barn -->
     <input type="text" id="barn" name="barn" placeholder="Har du barn (j/n)?" /> <!-- Text input for second field -->
     <!-- id: Links to label; name: Used for form submission; required: Ensures field isn't empty -->
 
