--- a/tema02/oppgave08-t2/oppgave08-t2.html
+++ b/tema02/oppgave08-t2/oppgave08-t2.html
@@ -74,7 +74,7 @@
       opacity: 0.9; /* Fades buttons slightly on hover for feedback */
     }
   </style>
-</head></ul>
+</head>
 <body>
   <!-- Visible content of the page -->
   <h3>Hva er 3 ganger 3?</h3> <!-- Displays "Eksempel 1" as a centered heading -->
