--- a/tema02/oppgave08-t2/oppgave08-t2.html
+++ b/tema02/oppgave08-t2/oppgave08-t2.html
@@ -80,20 +80,23 @@
   <h3>Hva er 3 ganger 3?</h3> <!-- Displays "Eksempel 1" as a centered heading -->
 
    <?php
+    $message = "...";
+
       if ($_SERVER["REQUEST_METHOD"] == "POST") 
       {
           $tall = $_POST["tall"];
           if ($tall == 9) 
           {
-            echo "<p>Riktig! 3 ganger 3 er 9</p>";
+            $message = "Riktig! 3 ganger 3 er 9";
           } 
           else 
           {
-            echo "<p>Feil... 3 ganger 3 er ikke $tall</p>";
+            $message = "Feil... 3 ganger 3 er ikke $tall";
           }
       }
   ?>
-
+  
+  <p><?php echo $message; ?></p>
 
   <!-- Form for collecting user input -->
   <form method="post" action="">
