--- a/tema02/oppgave08-t2/oppgave08-t2.html
+++ b/tema02/oppgave08-t2/oppgave08-t2.html
@@ -1,115 +1,31 @@
-<!DOCTYPE html> <!-- Declares the document as HTML5 for modern browser standards -->
-<html lang="no"> <!-- Root element, sets language to Norwegian for accessibility and SEO -->
+<!DOCTYPE html>
+<html>
 <head>
-  <!-- Metadata section for page settings and resources -->
-  <meta charset="UTF-8"> <!-- Supports special characters like æ, ø, å -->
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Makes the page responsive for mobile devices -->
-  <title>oppgave 8</title> <!-- Title shown in the browser tab -->
-  <style>
-    /* Styling for the entire page */
-    body {
-      font-family: Arial, sans-serif; /* Sets font to Arial or a sans-serif fallback */
-      background-color: #f4f4f4; /* Light gray background */
-      margin: 0; /* Removes default margins */
-      padding: 20px; /* Adds space around content */
-    }
-
-    /* Styling for the heading */
-    h3 {
-      color: #333; /* Dark gray text color */
-      text-align: center; /* Centers the heading */
-    }
-
-    /* Styling for the form container */
-    form {
-      background-color: #fff; /* White background for the form */
-      border-radius: 8px; /* Rounds corners for a smooth look */
-      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); /* Adds a subtle shadow */
-      padding: 20px; /* Adds internal spacing */
-      max-width: 400px; /* Limits form width for readability */
-      margin: 0 auto; /* Centers the form horizontally */
-      text-align: center; /* Centers form elements */
-    }
-
-    /* Styling for labels */
-    label {
-      display: block; /* Stacks labels vertically above inputs */
-      margin-bottom: 8px; /* Adds space below labels */
-      font-weight: bold; /* Makes label text bold */
-      text-align: center; /* Centers label text */
-    }
-
-    /* Styling for text and number input fields */
-    input[type="text"],
-    input[type="number"] {
-      width: 90%; /* Sets input width to 90% of form width */
-      padding: 10px; /* Adds internal spacing */
-      margin-bottom: 15px; /* Adds space below inputs */
-      border: 2px solid #ccc; /* Light gray border */
-      border-radius: 4px; /* Rounds input corners */
-    }
-
-    /* Styling for submit and reset buttons */
-    input[type="submit"],
-    input[type="reset"] {
-      background-color: #5cb85c; /* Green background for buttons */
-      color: white; /* White text color */
-      border: none; /* Removes default border */
-      padding: 10px 15px; /* Adds internal spacing */
-      border-radius: 4px; /* Rounds button corners */
-      cursor: pointer; /* Shows pointer on hover */
-      width: 45%; /* Sets button width for better spacing */
-      margin: 5px; /* Adds space around buttons */
-      display: inline-block; /* Makes buttons sit side by side */
-    }
-
-    /* Specific styling for the reset button */
-    input[type="reset"] {
-      background-color: #d9534f; /* Red background for reset button */
-    }
-
-    /* Hover effect for buttons */
-    input[type="submit"]:hover,
-    input[type="reset"]:hover {
-      opacity: 0.9; /* Fades buttons slightly on hover for feedback */
-    }
-  </style>
+  <title>Oppgave 8</title>
 </head>
 <body>
-  <!-- Visible content of the page -->
-  <h3>Hva er 3 ganger 3?</h3> <!-- Displays "Eksempel 1" as a centered heading -->
+  <h3>Oppgave 8</h3>
 
-   <?php
-    $message = "...";
-
-      if ($_SERVER["REQUEST_METHOD"] == "POST") 
-      {
-          $tall = $_POST["tall"];
-          if ($tall == 9) 
-          {
-            $message = "Riktig! 3 ganger 3 er 9";
-          } 
-          else 
-          {
-            $message = "Feil... 3 ganger 3 er ikke $tall";
-          }
-      }
-  ?>
-  
-  <p><?php echo $message; ?></p>
-
-  <!-- Form for collecting user input -->
-  <form method="post" action="">
-
-    <!-- Number field -->
-    <label for="Tall">Tall</label> <!-- Label for Number -->
-    <input type="text" id="tall" name="tall" required placeholder="Skriv in svar" /> <!-- Text input for tall -->
-    <!-- id: Links to label; tall: Used for form submission; required: Ensures field isn't empty -->
-
-    <!-- Submit and reset buttons -->
-    <input type="submit" value="Fortsett" id="fortsett" name="fortsett" /> <!-- Submits form data -->
-    <input type="reset" value="Nullstill" name="nullstill" id="nullstill" /> <!-- Clears form inputs -->
+  <form method="post" action="" id="8" name="8">
+    Hva er 3 ganger 3 ? <input type="text" id="svar" name="svar" required /> <br />
+    <input type="submit" value="Fortsett" id="fortsett" name="fortsett" />
+    <input type="reset" value="Nullstill" name="nullstill" id="nullstill" /> <br />
   </form>
 </body>
 </html>
 
+<?php 
+
+if (isset($_POST ["fortsett"])) /* Fortsett-knappen er trykket */
+{
+  $svar=$_POST ["svar"];
+  if ($svar == 9) /* avgitt svar er riktig */
+  {
+    print("Riktig. 3 ganger 3 er 9 <br/>");
+  }
+  else /* avgitt svar er feil */
+  {
+    print("Feil. 3 ganger 3 er ikke $svar. 3 ganger 3 er 9 <br/>");
+  }
+}
+?>
