--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <li><a href="tema02/oppgave05-t2/oppgave05-t2.html" target="_blank">Oppgave 5</a></li>
         <li><a href="tema02/oppgave06-t2/oppgave06-t2.html" target="_blank">Oppgave 6</a></li>
         <li><a href="tema02/oppgave07-t2/oppgave07-t2.html" target="_blank">Oppgave 7</a></li>
-        <li><a href="tema02/oppgave08-t2/oppgave08-t2.html" target="_blank">Oppgave 8</a></li>
+        <li><a href="tema02/oppgave08-t2/oppgave08-t2.php" target="_blank">Oppgave 8</a></li>
     </ul>
 
     </body>
