Test of new tema03 oppgaver

--- a/index.html
+++ b/index.html
@@ -29,6 +29,18 @@
         <li><a href="tema02/oppgave08-t2/oppgave08-t2.php" target="_blank">Oppgave 8</a></li>
     </ul>
 
+    <h3>Svar på oppgaver fra tema 3</h3>
+    <ul>
+        <li><a href="tema03/oppgave01-t2/oppgave01-t3.html" target="_blank">Oppgave 1</a></li>
+        <li><a href="tema03/oppgave02-t2/oppgave02-t3.html" target="_blank">Oppgave 2</a></li>
+        <li><a href="tema03/oppgave03-t2/oppgave03-t3.html" target="_blank">Oppgave 3</a></li>
+        <li><a href="tema03/oppgave04-t2/oppgave04-t3.html" target="_blank">Oppgave 4</a></li>
+        <li><a href="tema03/oppgave05-t2/oppgave05-t3.html" target="_blank">Oppgave 5</a></li>
+        <li><a href="tema03/oppgave06-t2/oppgave06-t3.html" target="_blank">Oppgave 6</a></li>
+        <li><a href="tema03/oppgave07-t2/oppgave07-t3.html" target="_blank">Oppgave 7</a></li>
+        <li><a href="tema03/oppgave08-t2/oppgave08-t3.php" target="_blank">Oppgave 8</a></li>
+    </ul>
+
     </body>
     </html>
 </ul>
