--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <h3>Svar på oppgaver fra tema 2</h3>
     <ul>
-        <li><a href="tema02/oppgave01-t2/oppgave01-t2.html" target="_blank">Oppgave 1</a></li>
+        <li><a href="tema02/oppgave01-t2/oppgave01-t2.php" target="_blank">Oppgave 1</a></li>
         <li><a href="tema02/oppgave02-t2/oppgave02-t2.html" target="_blank">Oppgave 2</a></li>
         <li><a href="tema02/oppgave03-t2/oppgave03-t2.html" target="_blank">Oppgave 3</a></li>
         <li><a href="tema02/oppgave04-t2/oppgave04-t2.html" target="_blank">Oppgave 4</a></li>
