Maybe this will work?

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <h3>Svar på oppgaver fra tema 3</h3>
     <ul>
         <li><a href="tema03/oppgave01-t3/oppgave01-t3.php" target="_blank">Oppgave 1</a></li>
-        <li><a href="tema03/oppgave02-t3/oppgave02-t3.html" target="_blank">Oppgave 2</a></li>
+        <li><a href="tema03/oppgave02-t3/oppgave02-t3.php" target="_blank">Oppgave 2</a></li>
         <li><a href="tema03/oppgave03-t3/oppgave03-t3.html" target="_blank">Oppgave 3</a></li>
         <li><a href="tema03/oppgave04-t3/oppgave04-t3.html" target="_blank">Oppgave 4</a></li>
         <li><a href="tema03/oppgave05-t3/oppgave05-t3.html" target="_blank">Oppgave 5</a></li>
