--- a/tema03/oppgave07-t3/oppgave07-t3.html
+++ b/tema03/oppgave07-t3/oppgave07-t3.html
@@ -4,7 +4,7 @@
   <!-- Metadata section for page settings and resources -->
   <meta charset="UTF-8"> <!-- Supports special characters like æ, ø, å -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Makes the page responsive for mobile devices -->
-  <title>oppgave 7/title> <!-- Title shown in the browser tab -->
+  <title>oppgave 7</title> <!-- Title shown in the browser tab -->
   <style>
     /* Styling for the entire page */
     body {
@@ -80,7 +80,7 @@
   <h3>Sett inn ditt navn og etternavn</h3> <!-- Displays "Eksempel 1" as a centered heading -->
 
   <!-- Form for collecting user input -->
-  <form method="post" action="tema03/oppgave07-t3/oppgave07-t3.php" id="oppgave07-t3" name="oppgave07-t3">
+  <form method="post" action="tema03/oppgave07-t3/oppgave07-t3.html" id="oppgave07-t3" name="oppgave07-t3">
     <!-- method="post": Sends data securely to server -->
     <!-- action="eksempel-1.php": Points to PHP file for form processing -->
     <!-- id and name: Identifiers for JavaScript/CSS -->
