--- a/tema03/oppgave07-t3/oppgave07-t3.html
+++ b/tema03/oppgave07-t3/oppgave07-t3.html
@@ -80,7 +80,7 @@
   <h3>Sett inn ditt navn og etternavn</h3> <!-- Displays "Eksempel 1" as a centered heading -->
 
   <!-- Form for collecting user input -->
-  <form method="post" action="tema03/oppgave07-t3/oppgave07-t3.html" id="oppgave07-t3" name="oppgave07-t3">
+  <form method="post" action="tema03/oppgave07-t3/oppgave07-t3.php" id="oppgave07-t3" name="oppgave07-t3">
     <!-- method="post": Sends data securely to server -->
     <!-- action="eksempel-1.php": Points to PHP file for form processing -->
     <!-- id and name: Identifiers for JavaScript/CSS -->
