--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <li><a href="tema03/oppgave05-t3/oppgave05-t3.php" target="_blank">Oppgave 5</a></li>
         <li><a href="tema03/oppgave06-t3/oppgave06-t3.html" target="_blank">Oppgave 6</a></li>
         <li><a href="tema03/oppgave07-t3/oppgave07-t3.html" target="_blank">Oppgave 7</a></li>
-        <li><a href="tema03/oppgave08-t3/oppgave08-t3.php" target="_blank">Oppgave 8</a></li>
+        <li><a href="tema03/oppgave08-t3/oppgave08-t3.html" target="_blank">Oppgave 8</a></li>
     </ul>
 
     </body>
