Added oppgave 1 from tema 04

--- a/index.html
+++ b/index.html
@@ -6,41 +6,50 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
-<body>
-<h2>Svar på oppgaver!</h2>
-<ul>
-    <h3>Svar på oppgaver fra tema 1</h3>
-    <ul>
-        <li><a href="tema01/oppgave01/oppgave01.html" target="_blank">Oppgave 1</a></li>
-        <li><a href="tema01/oppgave02/oppgave02.html" target="_blank">Oppgave 2</a></li>
-        <li><a href="tema01/oppgave03/oppgave03.html" target="_blank">Oppgave 3</a></li>
-        <li><a href="tema01/oppgave04/oppgave04.html" target="_blank">Oppgave 4</a></li>
-    </ul>
+<html>
+    <body>
+        <h2>Svar på oppgaver!</h2>
+        <ul>
+            <h3>Svar på oppgaver fra tema 1</h3>
+            <ul>
+                <li><a href="tema01/oppgave01/oppgave01.html" target="_blank">Oppgave 1</a></li>
+                <li><a href="tema01/oppgave02/oppgave02.html" target="_blank">Oppgave 2</a></li>
+                <li><a href="tema01/oppgave03/oppgave03.html" target="_blank">Oppgave 3</a></li>
+                <li><a href="tema01/oppgave04/oppgave04.html" target="_blank">Oppgave 4</a></li>
+            </ul>
 
-    <h3>Svar på oppgaver fra tema 2</h3>
-    <ul>
-        <li><a href="tema02/oppgave01-t2/oppgave01-t2.html" target="_blank">Oppgave 1</a></li>
-        <li><a href="tema02/oppgave02-t2/oppgave02-t2.html" target="_blank">Oppgave 2</a></li>
-        <li><a href="tema02/oppgave03-t2/oppgave03-t2.html" target="_blank">Oppgave 3</a></li>
-        <li><a href="tema02/oppgave04-t2/oppgave04-t2.html" target="_blank">Oppgave 4</a></li>
-        <li><a href="tema02/oppgave05-t2/oppgave05-t2.html" target="_blank">Oppgave 5</a></li>
-        <li><a href="tema02/oppgave06-t2/oppgave06-t2.html" target="_blank">Oppgave 6</a></li>
-        <li><a href="tema02/oppgave07-t2/oppgave07-t2.html" target="_blank">Oppgave 7</a></li>
-        <li><a href="tema02/oppgave08-t2/oppgave08-t2.php" target="_blank">Oppgave 8</a></li>
-    </ul>
+            <h3>Svar på oppgaver fra tema 2</h3>
+            <ul>
+                <li><a href="tema02/oppgave01-t2/oppgave01-t2.html" target="_blank">Oppgave 1</a></li>
+                <li><a href="tema02/oppgave02-t2/oppgave02-t2.html" target="_blank">Oppgave 2</a></li>
+                <li><a href="tema02/oppgave03-t2/oppgave03-t2.html" target="_blank">Oppgave 3</a></li>
+                <li><a href="tema02/oppgave04-t2/oppgave04-t2.html" target="_blank">Oppgave 4</a></li>
+                <li><a href="tema02/oppgave05-t2/oppgave05-t2.html" target="_blank">Oppgave 5</a></li>
+                <li><a href="tema02/oppgave06-t2/oppgave06-t2.html" target="_blank">Oppgave 6</a></li>
+                <li><a href="tema02/oppgave07-t2/oppgave07-t2.html" target="_blank">Oppgave 7</a></li>
+                <li><a href="tema02/oppgave08-t2/oppgave08-t2.php" target="_blank">Oppgave 8</a></li>
+            </ul>
 
-    <h3>Svar på oppgaver fra tema 3</h3>
-    <ul>
-        <li><a href="tema03/oppgave01-t3/oppgave01-t3.php" target="_blank">Oppgave 1</a></li>
-        <li><a href="tema03/oppgave02-t3/oppgave02-t3.php" target="_blank">Oppgave 2</a></li>
-        <li><a href="tema03/oppgave03-t3/oppgave03-t3.php" target="_blank">Oppgave 3</a></li>
-        <li><a href="tema03/oppgave04-t3/oppgave04-t3.php" target="_blank">Oppgave 4</a></li>
-        <li><a href="tema03/oppgave05-t3/oppgave05-t3.php" target="_blank">Oppgave 5</a></li>
-        <li><a href="tema03/oppgave06-t3/oppgave06-t3.html" target="_blank">Oppgave 6</a></li>
-        <li><a href="tema03/oppgave07-t3/oppgave07-t3.html" target="_blank">Oppgave 7</a></li>
-        <li><a href="tema03/oppgave08-t3/oppgave08-t3.html" target="_blank">Oppgave 8</a></li>
-    </ul>
+            <h3>Svar på oppgaver fra tema 3</h3>
+            <ul>
+                <li><a href="tema03/oppgave01-t3/oppgave01-t3.php" target="_blank">Oppgave 1</a></li>
+                <li><a href="tema03/oppgave02-t3/oppgave02-t3.php" target="_blank">Oppgave 2</a></li>
+                <li><a href="tema03/oppgave03-t3/oppgave03-t3.php" target="_blank">Oppgave 3</a></li>
+                <li><a href="tema03/oppgave04-t3/oppgave04-t3.php" target="_blank">Oppgave 4</a></li>
+                <li><a href="tema03/oppgave05-t3/oppgave05-t3.php" target="_blank">Oppgave 5</a></li>
+                <li><a href="tema03/oppgave06-t3/oppgave06-t3.html" target="_blank">Oppgave 6</a></li>
+                <li><a href="tema03/oppgave07-t3/oppgave07-t3.html" target="_blank">Oppgave 7</a></li>
+                <li><a href="tema03/oppgave08-t3/oppgave08-t3.html" target="_blank">Oppgave 8</a></li>
+            </ul>
+
+            <h3>Svar på oppgaver fra tema 4</h3>
+            <ul>
+                <li><a href="tema04/oppgave01-t4/oppgave01-t4.html" target="_blank">Oppgave 1</a></li>
+                <li><a href="tema04/oppgave02-t4/oppgave02-t4.php" target="_blank">Oppgave 2</a></li>
+                <li><a href="tema04/oppgave03-t4/oppgave03-t4.php" target="_blank">Oppgave 3</a></li>
+                <li><a href="tema04/oppgave04-t4/oppgave04-t4.php" target="_blank">Oppgave 4</a></li>
+                <li><a href="tema04/oppgave05-t4/oppgave05-t4.php" target="_blank">Oppgave 5</a></li>
+            </ul>
 
     </body>
-    </html>
-</ul>
+</html>
