Removed the required parameter from the input field in the html file

--- a/tema04/oppgave01-t4/oppgave01-t4.html
+++ b/tema04/oppgave01-t4/oppgave01-t4.html
@@ -87,7 +87,7 @@
 
     <!-- Postnummer field -->
     <label for="Tall">Postnummer</label> <!-- Label for Postnummer -->
-    <input type="text" id="postnummer" name="postnummer" required placeholder="Skriv in et postnummer" /> <!-- Text input for Postnummer -->
+    <input type="text" id="postnummer" name="postnummer" placeholder="Skriv in et postnummer" /> <!-- Text input for Postnummer -->
     <!-- id: Links to label; name: Used for form submission; required: Ensures field isn't empty -->
 
     <!-- Submit and reset buttons -->
