--- a/tema04/oppgave02-t4/oppgave02-t4.html
+++ b/tema04/oppgave02-t4/oppgave02-t4.html
@@ -87,7 +87,7 @@
 
     <!-- Klassekode field -->
     <label for="Klassekode">Klassekode</label> <!-- Label for Klassekode -->
-    <input type="text" id="klassekode" name="klassekode" required placeholder="Skriv in et klassekode" /> <!-- Text input for Klassekode -->
+    <input type="text" id="klassekode" name="klassekode" placeholder="Skriv in et klassekode" /> <!-- Text input for Klassekode -->
     <!-- id: Links to label; name: Used for form submission; required: Ensures field isn't empty -->
 
     <!-- Submit and reset buttons -->
