Added oppgave 3 from tema 4

--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
             <ul>
                 <li><a href="tema04/oppgave01-t4/oppgave01-t4.html" target="_blank">Oppgave 1</a></li>
                 <li><a href="tema04/oppgave02-t4/oppgave02-t4.html" target="_blank">Oppgave 2</a></li>
-                <li><a href="tema04/oppgave03-t4/oppgave03-t4.php" target="_blank">Oppgave 3</a></li>
-                <li><a href="tema04/oppgave04-t4/oppgave04-t4.php" target="_blank">Oppgave 4</a></li>
-                <li><a href="tema04/oppgave05-t4/oppgave05-t4.php" target="_blank">Oppgave 5</a></li>
+                <li><a href="tema04/oppgave03-t4/oppgave03-t4.html" target="_blank">Oppgave 3</a></li>
+                <li><a href="tema04/oppgave04-t4/oppgave04-t4.html" target="_blank">Oppgave 4</a></li>
+                <li><a href="tema04/oppgave05-t4/oppgave05-t4.html" target="_blank">Oppgave 5</a></li>
             </ul>
 
     </body>
