--- a/index.html
+++ b/index.html
@@ -51,5 +51,10 @@
                 <li><a href="tema04/oppgave05-t4/oppgave05-t4.html" target="_blank">Oppgave 5</a></li>
             </ul>
 
+            <h3>Svar på oppgaver fra tema 5</h3>
+            <ul>
+                <li><a href="tema05/registrer-studium.php" target="_blank">Registrer studium</a></li>
+            </ul>
+
     </body>
 </html>
