Added another task, now the one that shows the results in the db

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
             <h3>Svar på oppgaver fra tema 5</h3>
             <ul>
                 <li><a href="tema05/registrer-studium.php" target="_blank">Registrer studium</a></li>
+                <li><a href="tema05/vi-alle-studier.php" target="_blank">Vis alle studier</a></li>
             </ul>
 
     </body>
