Forgor about the index reference

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
             <ul>
                 <li><a href="tema05/registrer-studium.php" target="_blank">Registrer studium</a></li>
                 <li><a href="tema05/vi-alle-studier.php" target="_blank">Vis alle studier</a></li>
+                <li><a href="tema05/slett-studium.php" target="_blank">Slet studium</a></li>
             </ul>
 
     </body>
