Added registrer emne

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
                 <li><a href="tema05/registrer-studium.php" target="_blank">Registrer studium</a></li>
                 <li><a href="tema05/vi-alle-studier.php" target="_blank">Vis alle studier</a></li>
                 <li><a href="tema05/slett-studium.php" target="_blank">Slett studium</a></li>
+                <li><a href="tema05/registrer-emne.php" target="_blank">Emne kode</a></li>
             </ul>
 
     </body>
