--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
             <h3>Svar på oppgaver fra tema 5</h3>
             <ul>
-                <li><a href="tema05/registrer-emne.php" target="_blank">Registrer kode</a></li>
+                <li><a href="tema05/registrer-emne.php" target="_blank">Registrer emne</a></li>
                 <li><a href="tema05/vis-alle-emner.php" target="_blank">Vis alle emner</a></li>
                 <li><a href="tema05/slett-emne.php" target="_blank">Slett emner</a></li>
             </ul>
