--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <li><a href="tema04/oppgave05-t4/oppgave05-t4.html" target="_blank">Oppgave 5</a></li>
             </ul>
 
-            <h3>Svar på oppgaver fra tema 5</h3>
+            <h3>Svar på oppgaver fra tema 5 og 6</h3>
             <ul>
                 <li><a href="tema05_og_tema06/registrer-emne.php" target="_blank">Registrer emne</a></li>
                 <li><a href="tema05_og_tema06/vis-alle-emner.php" target="_blank">Vis alle emner</a></li>
