--- a/index.html
+++ b/index.html
@@ -64,5 +64,18 @@
                 <li><a href="tema05_og_tema06/slett-emne.php" target="_blank">Slett emner</a></li>
             </ul>
 
+           <h3>Svar på obligatorisk oppgave 2</h3>
+            <ul>
+                <li><a href="obligatorisk_oppgave_2/registrer-klasse.php" target="_blank">Registrer klasse</a></li>
+                <li><a href="obligatorisk_oppgave_2/vis-alle-klasser.php" target="_blank">Vis alle klasser</a></li>
+                <li><a href="obligatorisk_oppgave_2/slett-klasse.php" target="_blank">Slett klasser</a></li>
+            </ul>
+            <br/>
+            <ul>
+                <li><a href="obligatorisk_oppgave_2/registrer-student.php" target="_blank">Registrer student</a></li>
+                <li><a href="obligatorisk_oppgave_2/vis-alle-studenter.php" target="_blank">Vis alle studenter</a></li>
+                <li><a href="obligatorisk_oppgave_2/slett-student.php" target="_blank">Slett student</a></li>
+            </ul>
+
     </body>
 </html>
