--- a/index.html
+++ b/index.html
@@ -77,5 +77,9 @@
                 <li><a href="obligatorisk_oppgave_2/slett-student.php" target="_blank">Slett student</a></li>
             </ul>
 
+            <h3>
+                <li><a href="java/test.java" target="_blank">Slett student</a></li>
+            </h3>
+
     </body>
 </html>
